# ucon-tools

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  glama.json  pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
benchmarks/unitsafe/: CHANGELOG.md  LICENSE  README.md  run.py
benchmarks/unitsafe/data/: test.jsonl
benchmarks/unitsafe/schema/: unitsafe_v2_schema.json
docs/guides/mcp-server/: custom-units.md  index.md  registering-formulas.md
docs/reference/: mcp-tools.md
scripts/: eval_decompose_live.py  eval_natural_language_problems.py  eval_ollama.py  train_quantity_ner.py
tests/: test_decompose_eval.py  test_decompose_natural_language_eval.py  test_ner.py
tests/ucon/tools/mcp/: conftest.py  test_builtin_formulas.py  test_constants.py  test_extended_basis_dimensions.py  test_formulas.py  test_koq.py  test_server.py
ucon/tools/mcp/: __init__.py  formulas.py  koq.py  schema.py  server.py  session.py  suggestions.py
ucon/tools/mcp/formulas/: __init__.py  _registry.py  aerospace.py  chemistry.py  engineering.py  medical.py  physics.py  sre.py
