# © 2026 The Radiativity Company
# Licensed under the AGPL License, Version 3.0
# See the LICENSE file for details.

[project]                                                                                                        
name = "ucon-tools"
dynamic = ["version"]
description = "Home of ucon interfaces for man and machine"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"
authors = [
    { name = "Emmanuel I. Obi", email = "withtwoemms@gmail.com" }
]
maintainers = [
    { name = "Emmanuel I. Obi", email = "withtwoemms@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["ucon>=0.10.1"]

[project.urls]
Homepage = "https://github.com/withtwoemms/ucon-tools"
Repository = "https://github.com/withtwoemms/ucon-tools"

[project.optional-dependencies]
test = ["coverage[toml]>=5.5", "pytest>=7.0"]
pydantic = ["pydantic>=2.0"]
mcp = ["mcp>=1.0; python_version >= '3.10'"]

[project.scripts]
ucon-mcp = "ucon.tools.mcp.server:main"

# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ucon.tools", "ucon.tools.mcp", "ucon.tools.mcp.ner"]

[tool.setuptools_scm]
# Version derived from git tags
# no-local-version prevents +gXXXXXX suffixes that PyPI rejects
local_scheme = "no-local-version"

# -----------------------------------------------------------------------------
# uv Configuration
# -----------------------------------------------------------------------------

[tool.uv]
python-preference = "managed"
cache-dir = ".uv_cache"

# -----------------------------------------------------------------------------
# Coverage Configuration
# -----------------------------------------------------------------------------

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "**/tests/*",
    "**/site-packages/*.py",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"